--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -114,3 +114,12 @@
     flex-direction: column;
   }
 }
+.names{
+margin-top: 30px;
+font-size: 20px;
+background-color: aliceblue;
+padding: 20px;
+}
+.names:hover{
+  border-left: 2px solid #0070f3;
+}
